# zero-copy-env

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_br.md  SECURITY.md
.github/workflows/: bench.yml  ci.yml  release.yml
benches/: env_bench.rs
examples/: basic.rs
src/: lib.rs
tests/: test_env.rs
