[package]
name = "zero_copy_env"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Zero-copy environment variable access via OS memory (FFI/libc)"
homepage = "https://github.com/ejrgeek/zero_copy_env"
repository = "https://github.com/ejrgeek/zero_copy_env"
readme = "README.md"
keywords = ["env", "zero-copy", "ffi", "performance"]
categories = ["config", "no-std"]

[package.metadata.docs.rs]
[features]
default = ["std"]
std = []
cache = []
dotenv = []


[dependencies]
libc = "0.2.185"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "env_bench"
harness = false